# project_template

./: Makefile.am  README.md  autogen.sh  clean.sh  configure.ac
lib/: Makefile.am  error.c  xmalloc.c
proj_name/: common.h  error.h
src/: Makefile.am  main.c
